src/main/kotlin/com/example/yourssu/error/PermissionDeniedError.kt
package com.example.yourssu.error

class PermissionDeniedError(override val message: String? = "Permission denied") : RuntimeException()